# socket

./: CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  HACKING.md  README.md  clang-tidy.sh
.github/workflows/: ci.yml
cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
include/: peterfh.hpp
include/http/: client.hpp  request.hpp  types.hpp  url.hpp
include/socket/: address.hpp  error.hpp  poll.hpp  tcp.hpp
source/: lib.cpp  lib.hpp
src/http/: client.cpp  error.cpp  request.cpp  url.cpp
src/socket/: address.cpp  common.cpp  error.cpp  poll.cpp  tcp.cpp
test/: CMakeLists.txt
test/showcase/: tcp.cpp
test/source/: lib_test.cpp  tcp_socket_showcase.cpp  tcp_socket_test.cpp
test/system/: http.cpp  tcp.cpp
test/unit/: http_request.cpp  http_url.cpp
